# ChangeLog for gnome-extra/evolution-data-server
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-extra/evolution-data-server/ChangeLog,v 1.125 2007/06/14 17:28:11 dang Exp $

*evolution-data-server-1.10.1-r3 (14 Jun 2007)
*evolution-data-server-1.8.3-r5 (14 Jun 2007)
*evolution-data-server-1.6.2-r1 (14 Jun 2007)

  14 Jun 2007; Daniel Gryniewicz <dang@gentoo.org>
  +files/evolution-data-server-1.10.1-imap-overflow.patch,
  +evolution-data-server-1.6.2-r1.ebuild,
  +evolution-data-server-1.8.3-r5.ebuild,
  +evolution-data-server-1.10.1-r3.ebuild:
  Add fix for IMAP overflow; bug #182011

  02 Jun 2007; <leio@gentoo.org> -evolution-data-server-1.8.2.ebuild,
  -evolution-data-server-1.8.3.ebuild,
  -evolution-data-server-1.8.3-r1.ebuild,
  -evolution-data-server-1.8.3-r2.ebuild:
  Remove old

  02 Jun 2007; Brent Baude <ranger@gentoo.org>
  evolution-data-server-1.8.3-r4.ebuild:
  Marking evolution-data-server-1.8.3-r4 ppc stable for bug #171107

  31 May 2007; Jeroen Roovers <jer@gentoo.org>
  evolution-data-server-1.8.3-r4.ebuild:
  Stable for HPPA (bug #171107).

  31 May 2007; Daniel Gryniewicz <dang@gentoo.org>
  evolution-data-server-1.8.3-r4.ebuild:
  Marked stable on amd64 for bug #171107

  31 May 2007; Brent Baude <ranger@gentoo.org>
  evolution-data-server-1.8.3-r4.ebuild:
  Marking evolution-data-server-1.8.3-r4 ppc64 stable for bug #171107

  30 May 2007; Raúl Porcel <armin76@gentoo.org>
  evolution-data-server-1.8.3-r4.ebuild:
  alpha/ia64 stable wrt #171107

  29 May 2007; Andrej Kacian <ticho@gentoo.org>
  evolution-data-server-1.8.3-r4.ebuild:
  Stable on x86, bug #171107.

  29 May 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  evolution-data-server-1.8.3-r4.ebuild:
  Stable on sparc wrt #171107

*evolution-data-server-1.10.1-r2 (03 May 2007)
*evolution-data-server-1.8.3-r4 (03 May 2007)

  03 May 2007; <pva@gentoo.org>
  files/evolution-data-server-APOP-auth-fix.patch,